corrected the deficiencies